# amplifier-module-hooks-logging

./: AGENTS.md  README.md  pyproject.toml
.amplifier/digital-twin-universe/profiles/: e2e-event-logging.yaml
.github/: copilot-instructions.md
amplifier_mod_hooks_logging/: __init__.py
amplifier_mod_hooks_logging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
amplifier_module_hooks_logging/: __init__.py
tests/: test_behavioral.py  test_strip_raw.py  test_task4_deferred_and_contributions.py  test_validation.py
