[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-module-hooks-logging"
version = "1.0.0"
description = "Reference hook module - Structured logging for Amplifier"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
]

[project.entry-points."amplifier.modules"]
hooks-logging = "amplifier_mod_hooks_logging:mount"
